--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@jasonsoft/nestjs-common": "^1.3.3",
+    "@nestjs/common": "^10.2.4",
     "@nestjs/config": "^3.0.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.2.4",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
+    "bcryptjs": "^2.4.3",
+    "node-telegram-bot-api": "^0.61.0",
+    "node-telegram-bot-api-middleware": "^0.1.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +46,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/node-telegram-bot-api": "^0.61.7",
     "@types/sequelize": "^4.28.15",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
