--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "langchain": "^0.0.146",
     "node-telegram-bot-api": "^0.61.0",
     "node-telegram-bot-api-middleware": "^0.1.3",
+    "openai": "^4.6.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
