--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@jasonsoft/nestjs-common": "^1.3.3",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.2.4",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.2.4",
