--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
     "bcryptjs": "^2.4.3",
+    "bot-brother": "^2.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "langchain": "^0.0.146",
